# platform.core.base.syspopup

./: AUTHORS  CMakeLists.txt  project.config  syspopup.manifest
TC/unit/: Makefile  utc_MODULE_API_func.c.in
data/: syspopup_db.sql
data/wearable/: syspopup_db.sql
debian/: changelog  control  rules  syspopup-0.install.in  syspopup-0.postinst  syspopup-caller-0.install.in  syspopup-caller-0.postinst  syspopup-caller-dev.install.in  syspopup-dev.install.in
include/: SLP_SYSPOPUP_PG.h  simple_util.h  syspopup.h  syspopup_api.h  syspopup_caller.h  syspopup_core.h  syspopup_db.h
include/pg-doxy/: pg-doxy.sh
packaging/: org.tizen.aul.syspopup.conf.in  syspopup.changes  syspopup.manifest  syspopup.spec
src/: syspopup_core.c  syspopup_db.c
syspopup/: CMakeLists.txt  syspopup-wayland.pc.in  syspopup-x.pc.in  syspopup.c  syspopup.pc.in  syspopup_efl.c  syspopup_efl.h  syspopup_wayland.c  syspopup_wayland.h  syspopup_x.c  syspopup_x.h
syspopup-app/: CMakeLists.txt  org.tizen.syspopup-app.desktop.in  org.tizen.syspopup-app.xml.in  syspopup-app.c  syspopup-app.h
syspopup-app/include/: syspopup-app.h
syspopup-app/po/: CMakeLists.txt  POTFILES.in  en_GB.po  syspopup-tempapp.pot  update-po.sh
syspopup-app/src/: syspopup-app.c
syspopup-caller/: CMakeLists.txt  syspopup-caller.pc.in  syspopup_caller.c
test/: CMakeLists.txt  test.c
